# memorix

./: .env.example  .gitignore  .mcp.json  .npmignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  TEAM.md  compose.yaml  docker-compose.yml  llms-full.txt  llms.txt  memorix.example.yml  package-lock.json  package.json  progress.txt  tsup.config.ts  vitest.config.ts
research/: .gitattributes  .gitignore  ADMISSION-REVIEWER-GUIDE.md  ANNOTATION-PROTOCOL.md  AUTOMATED-PRE-ADMISSION-AUDIT-CONTRACT.md  BASELINE_PROTOCOL.md  BLACK-BOX-CONTROLLER-CONTRACT.md  CANDIDATE-ADMISSION-PLAN.md  CASE-ADMISSION-REVIEW-CONTRACT.md  CASE-CANDIDATES.md  CASE-REGISTRY-CONTRACT.md  CLAIMS.md  CONFIRMATORY-ANALYSIS-FREEZE.md  CONFIRMATORY-EXECUTION-ARCHITECTURE.md  EVIDENCE-STATUS.md  LEGACY-ARTIFACTS.md  LITERATURE.md  LOCAL-AGENT-UX-DIAGNOSTIC.md  NATIVE-DIAGNOSTIC-EXECUTION-QUEUE.md  NATIVE-MCP-BUDGET-CONTRACT.md  NATIVE-SESSION-FORMATION-CONTRACT.md  PILOT-72H.md  PRIVATE-ORACLE-CONTRACT.md  PROTOCOL.md  PUBLIC-ARTIFACT-CONTRACT.md  PUBLIC-CROSS-MODEL-REPLICATION-CONTRACT.md  PUBLIC-REPRODUCIBLE-STUDY-CONTRACT.md  README.md  RESULTS-PILOT.md  RETIRED-DEVELOPMENT-CORPUS.md  REVIEWER-HANDOFF-PACKET-CONTRACT.md  RUNTIME-MEASUREMENT-CONTRACT.md  SEALED-TASK-CONTRACT.md  SOURCE-LEDGER-CONTRACT.md  SUBMISSION-READINESS.md  TRACE-REPLAY-CONTRACT.md  pyproject.toml
research/artifacts/: README.md
research/cases/: CANDIDATE-SOURCES.toml  README.md  REGISTRY.toml
research/paper-icse-nier/: .gitignore  README.md  SUBMISSION-CHECKLIST.md  build-anonymous-supplement.ps1  (+2 more)
(+888 files in other folders)
